styled usersList in sidebar as when a user eneters a long name it overflows the sidebar. Issue fixed

--- a/public/chat.css
+++ b/public/chat.css
@@ -28,15 +28,6 @@
   transition: width 0.8s ease 0.3s;
 }
 
-.side-bar h3 {
-  color: #fff;
-  top: 23px;
-  position: absolute;
-  left: 30px;
-  opacity: 0;
-  text-decoration: 2px underline;
-}
-
 .icon1 {
   color: #fff;
   font-size: 1.2rem;
@@ -60,15 +51,17 @@
 .users {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   margin-top: 68px;
   opacity: 0;
   height: 100%;
-  background: darkslategray;
+  overflow-x: auto;
+  padding-left: 5px;
 }
 
 .users ol {
-  /* border-top: 2px solid #fff; */
+  /* border-top: 1px solid #fff; */
 }
 
 .users li {
@@ -76,7 +69,7 @@
   margin: 16px 0;
   list-style: none;
   font-size: 0.9rem;
-  padding: 0px 25px;
+  padding: 0px 5px 0 22px;
   background-image: url("online.png");
   background-repeat: no-repeat;
   background-position: left;
@@ -84,7 +77,7 @@
 }
 
 .active {
-  width: 150px;
+  width: 100px;
 }
 
 .fadein {
